# boilermake25

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  temp.txt
backend/: code_executor.py  main.py  pr_assignment.py  resume_analyzer.py  session.py
backend/code_executors/: __init__.py  base.py  javascript_executor.py  python_executor.py  security.py  typescript_executor.py
backend/output/7ee489244081e1b23204c6410bbcc16c9a6d4def51734c35f813b5a519d2dcbf/: job_analysis_20250222_022426.json  job_analysis_20250222_160407.json  job_analysis_20250222_160846.json  resume_analysis_20250222_022426.json  resume_analysis_20250222_155818.json  (+2 more)
bs_parsing/: bs_utils.py  parser.py  rest_utils.py
code_comprehension/: __init__.py  __main__.py  snippet_maker.py  system_prompt.txt
embedding_model/: embedding.py
frontend/: package-lock.json  package.json
gh_scraper/: FINAL.py  extract_gh_files.py  parser.py  pdf_annotator.py  readme_scraper.py
gh_scraper/data/: Abuynits.json  JonathanOppenheimer.json  SpideR1sh1.json  example_res.json  harmya.json  sagarreddypatil.json  user_repo.json.npy  user_repo.npy
gh_scraper/parsing_utils/: bs_utils.py  verify_resume_info.py
input/: job_posting.txt
input-frontend/: package-lock.json  package.json  tailwind.config.ts
output/: output.json
repo-llm-context/: main.py  pyproject.toml
repo_llm_context/: __init__.py  __main__.py  code_exts.py  groq.py  scc_runner.py
resume_parsing/: format.py  json_format.py  parse.py  prompts.py  resume_parse.py
saad/: github_api_call_test.py  heuristics.py  prs.py  query.graphql  requirements.txt  topic_examples.py  topics.py  utils.py
saad/prompts/: prompt.txt
(+143 files in other folders)
