[project]
name = "boilermake25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.18.0",
    "instructor>=1.7.2",
    "joblib>=1.4.2",
    "langchain>=0.3.19",
    "modal>=0.73.66",
    "openai>=1.64.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.12.1",
    "requests>=2.32.3",
]
