[project]
name = "boilermake25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.8",
    "fastapi-sessions>=0.3.2",
    "groq>=0.18.0",
    "joblib>=1.4.2",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.6",
    "modal>=0.73.66",
    "openai>=1.64.0",
    "path>=17.1.0",
    "pdbpp>=0.10.3",
    "pydantic>=2.10.6",
    "pymupdf>=1.25.3",
    "pypdf>=5.3.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.12.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
